# zeebe-grpc-python

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: build-grpc.yml
bpmn/: echo.bpmn
zeebe_grpc/: __init__.py  gateway_pb2.py  gateway_pb2_grpc.py
